test/test_units/test_kclvm/test_types/invalid_test_data/unification/unification.k
schema Config:
    name: str
    id?: int
    
config.name: Config {
    name: "config"
    id: 1
}
